# simulator

./: .cursorrules  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_GUIDE.md  __init__.py  api_audit_tests.py  audit_microbench_data.md  bud_component.py  bugs.md  comprehensive_api_test.py  cpu_test_detailed.py  package-lock.json  package.json  requirements.txt  run_api.py  setup.bat  setup.py  setup.sh  setup_dev.sh  solutions.md  solutions_round2.md  start.sh  start_app.sh  start_servers.sh  test_api.py  test_dynamic_models.py  test_llm.py  test_updated_cpu.py  verify_setup.py
llm-memory-calculator/: LICENSE  README.md  pyproject.toml
llm-memory-calculator/data/benchmarks/: coverage_report.json  ground_truth.json  pending_review.json
llm-memory-calculator/docs/: ADD_NEW_CPU_GUIDE.md  CPU_SUPPORT.md  EXTERNAL_USAGE.md  LORA_ORIGINAL.md  LORA_SUPPORT.md  PERFORMANCE_API.md  PERFORMANCE_API_GUIDE.md  README.md  README_ORIGINAL.md  device_matching.md
llm-memory-calculator/examples/: auto_parallelism_demo.py  basic_usage.py  best_parallelism.py  compare_models.py  comprehensive_performance_demo.py  cpu_identification_example.py  device_matching_example.py  example_cluster_to_estimate.py  external_repo_simulation.py  llama3_test.py  performance_estimation.py  simple_example.py  test.py  validation_report.py
llm-memory-calculator/src/llm_memory_calculator/: __init__.py  calculator.py  config_normalizer.py  huggingface_loader.py  inference_engines.py  parallelism_optimizer.py  parameter_counter.py  performance_estimator.py  types.py  utils.py
llm-memory-calculator/tests/: __init__.py  accuracy_baseline.json  test_accuracy_remediation.py  test_bud_component.py  test_causal_masking.py  test_comm_modeling.py  test_cpu_roofline.py  test_cpu_round2.py  test_hardware_source.py  test_inference_engines.py  test_training_advanced.py  test_training_phase2.py  validation_benchmarks.py
llm-memory-calculator/tests/budevolve/: conftest.py  test_algorithm_evolver.py  test_budevolve_r2_fixes.py  test_cli.py  test_cpu_scheduler.py  test_evaluator.py  test_hardware_explorer.py  test_integration.py  test_numeric_config_optimizer.py  test_roofline_analyzer.py  test_sensitivity.py  test_types.py
llm-memory-calculator/tests/serving/: conftest.py  test_batch_scheduler.py  test_cluster.py  test_config_optimizer.py  test_constants.py  test_cpu_benchmark_validation.py  test_cpu_serving_integration.py  test_disaggregation.py  test_integration.py  test_memory_model.py  test_optimizer_round2.py  test_power_model.py  test_power_per_device_tdp.py  test_prefix_cache.py  test_request.py  test_serving_round2.py  test_simulator.py  test_slo_tracker.py  test_verified_fixes_serving.py  test_workload.py
llm-memory-calculator/tests/training/: test_cluster_ranker.py  (+21 more)
(+544 files in other folders)
