[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-memory-calculator"
version = "0.1.0"
description = "Calculate memory requirements for Large Language Models across diverse architectures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "llm",
    "memory",
    "gpu",
    "machine-learning",
    "deep-learning",
    "transformers",
    "huggingface",
    "inference",
    "optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "huggingface-hub>=0.19.0",
    # GenZ dependencies
    "matplotlib>=3.9.0",
    "kaleido>=0.2.1",
    "nbformat>=5.9.2",
    "numpy>=1.26.3",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "plotly>=5.9.0",
    "tqdm>=4.66.2",
    "ipywidgets",
    "seaborn",
    "plotnine",
    "Jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
pareto = [
    "paretoset>=1.2.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-memory-calculator"
Documentation = "https://github.com/yourusername/llm-memory-calculator#readme"
Repository = "https://github.com/yourusername/llm-memory-calculator.git"
Issues = "https://github.com/yourusername/llm-memory-calculator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_memory_calculator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]